add section about us

--- a/Home-11/src/sass/base/_basic.scss
+++ b/Home-11/src/sass/base/_basic.scss
@@ -30,10 +30,13 @@ img {
     font-family: $main-font;
     font-size: 38px;
     font-weight: 700;
-  }
-  @include respond-to('huge') {
-    .section-header h2 {
-      font-size: 48px;
+    &.light {
+      color: $light-color;
     }
+  }
+}
+@include respond-to('huge') {
+  .section-header h2 {
+    font-size: 48px;
   }
 }
