add portfolio section and slick-slider

--- a/Home-11/src/sass/main.scss
+++ b/Home-11/src/sass/main.scss
@@ -5,7 +5,8 @@
 
 @import 'base/typography';
 @import 'base/basic';
-@import 'base/buttons';
+
+@import 'components/buttons';
 
 @import 'layout/grid';
 @import 'layout/header';
