--- a/Home-11/src/sass/components/_buttons.scss
+++ b/Home-11/src/sass/components/_buttons.scss
@@ -1,6 +1,6 @@
 .main-btn {
   display: inline-block;
-  padding: 12px 53px;
+  padding: 12px 54px;
   border-radius: 25px;
   background-image: linear-gradient(74deg, #49007c 0%, #e70088 100%);
   color: $light-color;
@@ -8,6 +8,7 @@
   font-size: 18px;
   font-weight: 400;
   transition: .3s all;
+  outline: none;
   &:hover {
     color: $light-color;
     background-image: linear-gradient(74deg, #49007c 0%, #e70088 50%);
