--- a/Home-11/src/sass/pages/_home.scss
+++ b/Home-11/src/sass/pages/_home.scss
@@ -143,6 +143,131 @@
   }
 }
 
+//Portfolio
+
+.portfolio {
+  @include respond-to('extra-small') {
+    button {
+      outline: none;
+    }
+    &__slider {
+      position: relative;
+      &__btn {
+        position: absolute;
+        z-index: 1;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 38px;
+        height: 38px;
+        background: $light-color;
+        border: none;
+        cursor: pointer;
+      }
+      &__prev-btn {
+        left: 0;
+        .left-arrow {
+          display: block;
+          width: 10px;
+          height: 10px;
+          margin: 0 auto;
+          border-right: 1px solid $dark-color;
+          border-top: 1px solid $dark-color;
+          transform: rotate(-135deg);
+        }
+      }
+      &__next-btn {
+        right: 0;
+        .right-arrow {
+          display: block;
+          width: 10px;
+          height: 10px;
+          margin: 0 auto;
+          border-right: 1px solid $dark-color;
+          border-top: 1px solid $dark-color;
+          transform: rotate(45deg);
+        }
+      }
+      &__slide {
+        position: relative;
+        outline: none;
+        img {
+          width: 100%;
+        }
+        &__overlay {
+          position: absolute;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(0, 0, 0, 0.63);
+          color: $light-color;
+          padding: 0 43px;
+          opacity: 0;
+          transition: .3s all ease-in;
+          &__title {
+            color: $light-color;
+            font-family: $main-font;
+            font-size: 20px;
+            font-weight: 700;
+            margin-bottom: 20px;
+          }
+          &__subtitle {
+            max-width: 387px;
+            color: $light-color;
+            font-family: $main-font;
+            font-size: 12px;
+            font-weight: 300;
+            margin-bottom: 45px;
+          }
+        }
+        &:hover &__overlay {
+          opacity: 1;
+          transition: .3s all ease-in;
+        }
+        .main-btn {
+          padding: 10px 30px;
+          font-size: 15px;
+        }
+      }
+    }
+  }
+  @include respond-to('huge') {
+    &__slider {
+      &__btn {
+        width: 58px;
+        height: 58px;
+      }
+      &__prev-btn {
+        .left-arrow {
+          width: 20px;
+          height: 20px;
+        }
+      }
+      &__next-btn {
+        .right-arrow {
+          width: 20px;
+          height: 20px;
+        }
+      }
+      &__slide {
+        &__overlay {
+          padding: 0 63px;
+          &__title {
+            font-size: 30px;
+          }
+          &__subtitle {
+            font-size: 16px;
+            margin-bottom: 65px;
+          }
+        }
+        .main-btn {
+          padding: 12px 53px;
+          font-size: 18px;
+        }
+      }
+    }
+  }
+}
+
 //About us
 
 .about {
