--- a/Home-23/assets/sass/pages/_blog-single.scss
+++ b/Home-23/assets/sass/pages/_blog-single.scss
@@ -5,5 +5,407 @@
 }
 
 .articles-wrapper {
-  padding: 65px 0;
+  margin-bottom: 30px;
+
+  &--second {
+    margin: 0 -15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: row;
+    padding-bottom: 30px;
+
+    @media (max-width: $screen-lg) {
+      padding: 0 15px;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+}
+
+.articles--single {
+  padding: 30px 40px 60px;
+
+  @media (max-width: $screen-sm) {
+    padding: 22px 15px;
+  }
+
+  h1 {
+    margin-top: 0;
+  }
+}
+
+//tabs
+
+.articles--left {
+  margin: 0 15px;
+  padding: 0;
+  flex-basis: 733px;
+
+  @media (max-width: $screen-lg) {
+    width: 100%;
+    margin-bottom: 20px;
+    flex-basis: auto;
+  }
+
+  .tabs {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    @include clearlist;
+
+    li {
+      width: 25%;
+      text-align: center;
+      padding: 25px 25px;
+      font-size: 18px;
+      font-weight: 700;
+      color: #000;
+      border: 1px solid #dcdcdc;
+      border-left: none;
+      background-color: #fbf7f4;
+      cursor: pointer;
+
+      @media (max-width: 640px) {
+        padding: 15px;
+        font-size: 15px;
+      }
+
+      @media (max-width: $screen-sm) {
+        padding: 15px 10px;
+        font-size: 12px;
+      }
+
+      @media (max-width: 320px) {
+        font-size: 10px;
+      }
+
+      &:last-child {
+        border-right: none;
+      }
+
+      &.tab.active {
+        position: relative;
+        border-bottom: none;
+        background-color: #fff;
+        color: #010000;
+
+        &:before {
+          content: '';
+          position: absolute;
+          display: block;
+          top: -1px;
+          left: 0;
+          right: 0;
+          border-top: 5px solid $link-color;
+          transition: .5s;
+        }
+      }
+    }
+  }
+
+  .tab_content {
+    padding: 27px 35px;
+
+    p:first-child {
+      margin-top: 0;
+    }
+  }
+
+  .donor-list {
+    margin: -27px -35px !important;
+    @include clearlist;
+
+    li {
+      padding: 30px 35px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid #dcdcdc;
+      background-color: #fff;
+
+      &:last-child {
+        border-bottom: none;
+      }
+
+      .donor-title, .donor-donate {
+        font-size: 24px;
+        line-height: 32px;
+        font-weight: 700;
+
+        @media (max-width: 640px) {
+          font-size: 20px;
+        }
+
+        @media (max-width: 640px) {
+          font-size: 16px;
+        }
+      }
+
+      .donor-donate {
+        .date {
+          display: block;
+          font-size: 16px;
+          font-weight: 400;
+          text-align: right;
+        }
+      }
+    }
+  }
+}
+
+.articles--right {
+  margin: 0 15px;
+  padding: 28px 28px 38px;
+  flex-basis: 370px;
+
+  @media (max-width: $screen-lg) {
+    width: 75%;
+    margin-bottom: 20px;
+    padding-bottom: 28px;
+    flex-basis: auto;
+    text-align: center;
+  }
+
+  @media (max-width: $screen-sm) {
+    width: 100%;
+  }
+
+  h2 {
+    margin-top: 0;
+    max-width: 237px;
+
+    @media (max-width: $screen-sm) {
+      font-size: 18px;
+    }
+
+    @media (max-width: $screen-lg) {
+      margin: 0 auto 20px;
+    }
+  }
+}
+
+.content-row {
+  margin: 0 -20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+
+  @media (max-width: $screen-lg) {
+    flex-direction: column;
+  }
+}
+
+.content__info, .content__video {
+  width: 50%;
+  padding: 0 20px;
+
+  @media (max-width: $screen-lg) {
+    width: 100%;
+  }
+}
+
+.content__video {
+  @media (max-width: $screen-lg) {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+}
+
+.sponsor {
+  display: flex;
+  align-items: center;
+
+  &__avatar {
+    margin-right: 15px;
+  }
+  &__status {
+    display: block;
+    font-size: 18px;
+    line-height: 32px;
+  }
+
+  &__team {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 32px;
+
+    @media (max-width: $screen-sm) {
+      font-size: 20px;
+    }
+  }
+}
+
+//Progress bar
+
+@for $i from 0 through 100 {
+  .progress progress[value="#{$i}"] {
+    & + .progress-value:before {
+      content: '#{$i}%';
+      position: relative;
+      background-color: #fff;
+      padding: 10px 15px;
+      border-radius: 5px;
+      border: 1px solid #dcdcdc;
+      color: #000;
+      font-weight: 700;
+    }
+
+    & + .progress-value:after {
+      display: block;
+      content: '';
+      width: 17px;
+      height: 17px;
+      background-color: #fff;
+      border-right: 1px solid #dcdcdc;
+      border-bottom: 1px solid #dcdcdc;
+      transform: rotate(60deg) skew(24deg);
+      position: absolute;
+      top: 21px;
+      right: 48%;
+    }
+    & ~ .progress-bg .progress-bar {
+      width: $i * 1%
+    }
+  }
+}
+
+.progress {
+  position: relative;
+  overflow: hidden;
+  progress {
+    position: absolute;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    left: -777px;
+  }
+}
+
+.progress-value {
+  position: relative;
+  margin-top: 85px;
+  margin-bottom: 30px;
+  color: #333;
+  display: block;
+  line-height: 21px;
+  text-align: center;
+
+  @media (max-width: $screen-sm) {
+    margin-top: 45px;
+  }
+}
+
+.progress-bg {
+  background: #fff;
+  position: relative;
+  height: 12px;
+  border-radius: 6px;
+  border: 1px solid #dcdcdc;
+  overflow: hidden;
+}
+
+.progress-bar {
+  overflow: hidden;
+  background: $link-color;
+  border-radius: 6px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  transition: width 1s linear;
+}
+
+.amount {
+  margin: 25px 0 65px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+
+  @media (max-width: $screen-sm) {
+    display: none;
+  }
+
+  &__raised {
+    display: block;
+    font-size: 18px;
+    line-height: 32px;
+  }
+
+  &__goal {
+    display: block;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 32px;
+  }
+
+  &__total, .total-wrapper {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 32px;
+  }
+}
+
+.action {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  @media (max-width: 640px) {
+    flex-direction: column;
+  }
+
+  &__social {
+    ul {
+      @include clearlist;
+
+      @media (max-width: $screen-lg) {
+        margin-bottom: 20px;
+      }
+
+      @media (max-width: $screen-sm) {
+        margin-top: 20px;
+      }
+    }
+
+    li {
+      @include clearlist;
+      display: inline-flex;
+      margin-right: 10px;
+      border-radius: 50%;
+
+      a {
+        width: 37px;
+        height: 37px;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        color: #fff;
+      }
+    }
+
+    .tweet {
+      background-color: #26a6d1;
+    }
+
+    .facebook {
+      background-color: #3b5998;
+    }
+
+    .google-plus {
+      background-color: #dd4b39;
+    }
+
+    .linkedin {
+      background-color: #007ab9;
+    }
+
+    .tumblr {
+      background-color: #000;
+    }
+  }
 }
