--- a/Home-23/assets/sass/pages/_blog.scss
+++ b/Home-23/assets/sass/pages/_blog.scss
@@ -7,6 +7,7 @@
   font-size: 18px;
   font-weight: 400;
   color: #a9a9a9;
+  background-color: #fcf9f7;
 
   @media (max-width: $screen-sm) {
     font-size: 16px;
